objects/ProductVersion__c.object
<CustomObject>
    <description>SFDC-1870 Product Version</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-1870</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BuildDate__c</fullName>
        <description>SFDC-3381 Product Version’s Build Date</description>
        <inlineHelpText>Product Version’s Build Date</inlineHelpText>
        <label>Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BuildNumber__c</fullName>
        <description>SFDC-3381 Product Version’s Build Number</description>
        <inlineHelpText>Product Version’s Build Number</inlineHelpText>
        <label>Build Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductVersionOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-3381 Owner of the Product Version</description>
        <inlineHelpText>Owner of the Product Version</inlineHelpText>
        <label>Product Version Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Versions</relationshipLabel>
        <relationshipName>ProductVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Version</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BuildNumber__c</columns>
        <columns>BuildDate__c</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>